<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:alpha="50"
    android:background="@android:color/background_light"
    android:orientation="horizontal"
    android:padding="2dp">

    <LinearLayout
        android:id="@+id/s1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/s11"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/play" />

        <TextView
            android:id="@+id/s12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/播放"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/s2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/s21"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stop" />

        <TextView
            android:id="@+id/s22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stop" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/s3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/s31"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/favorites" />

        <TextView
            android:id="@+id/s32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/加入收藏" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/s4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/s41"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/weibo" />

        <TextView
            android:id="@+id/s42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/分享" />

    </LinearLayout>
</LinearLayout>