<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:alpha="50"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    android:padding="2dp">

    <LinearLayout
        android:id="@+id/blay1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bmenu_img1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/all" />

        <TextView
            android:id="@+id/bmenu_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/首页"
            android:textAlignment="center"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blay2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bmenu_img2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/favorite" />

        <TextView
            android:id="@+id/bmenu_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/发现"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blay3"
        android:layout_width="30dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bmenu_img3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/lights" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blay4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bmenu_img4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/earth" />

        <TextView
            android:id="@+id/bmenu_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/消息"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/blay5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bmenu_img5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/atm" />

        <TextView
            android:id="@+id/bmenu_text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/我的"
            android:textSize="10sp" />

    </LinearLayout>
</LinearLayout>